plugins {
    id 'java'
    id 'application'
}

java {
    targetCompatibility JavaVersion.VERSION_1_8
    sourceCompatibility JavaVersion.VERSION_1_8
}

repositories {
    mavenLocal()
    mavenCentral()
}

mainClassName = 'Mars'

dependencies {
    testAnnotationProcessor('org.projectlombok:lombok:1.18.28')
    testCompileOnly('org.projectlombok:lombok:1.18.28')

    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.9.2')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
}

tasks.withType(Test).configureEach { useJUnitPlatform() }

jar {
    manifest {
        archiveBaseName = 'mars'
        version = '4.5'
        manifest {
            attributes 'Main-Class': mainClassName
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    // UnnecessaryUnicodeEscape
    options.encoding = "iso-8859-1"
}
